--- a/desafios/desafio03/index.html
+++ b/desafios/desafio03/index.html
@@ -11,7 +11,7 @@
             <h1>Conversor de Moedas v1.0</h1>
         </header>
         <section>
-            <form action="cad.php" method="get"> 
+            <form action="conversao.php" method="get"> 
                 <label for="moeda">Quantos R$ você tem na carteira?</label>
                 <input type="text" name="moeda" id="idnumber">
                 <input type="submit" value="Converter">
