--- a/desafios/desafio03/index.html
+++ b/desafios/desafio03/index.html
@@ -12,8 +12,8 @@
         </header>
         <section>
             <form action="conversao.php" method="get"> 
-                <label for="moeda">Quantos R$ você tem na carteira?</label>
-                <input type="text" name="moeda" id="idnumber">
+                <label for="din">Quantos R$ você tem na carteira?</label>
+                <input type="number" name="din" id="din" step='0.01'>
                 <input type="submit" value="Converter">
             </form>
         </section>
