--- a/desafios/desafio03api/index.html
+++ b/desafios/desafio03api/index.html
@@ -11,9 +11,9 @@
             <h1>Conversor de Moedas v1.0</h1>
         </header>
         <section>
-            <form action="cad.php" method="get"> 
-                <label for="moeda">Quantos R$ você tem na carteira?</label>
-                <input type="text" name="moeda" id="idnumber">
+            <form action="conversao.php" method="get"> 
+                <label for="din">Quantos R$ você tem na carteira?</label>
+                <input type="number" name="din" id="din" step='0.01'>
                 <input type="submit" value="Converter">
             </form>
         </section>
